<resources>

    <string name="app_name">Staff Wellness</string>

    <string name="content_description">image</string>
    <string name="powered">powered by minet</string>

    <!-- Login Signup -->
    <string name="login">Login</string>
    <string name="login_desc">welcome back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget">forgot password?</string>
    <string name="nuevo">don\'t have an account? sign up here</string>
    <string name="signup">Sign Up</string>
    <string name="signup_desc">create account</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="next">Next</string>
    <string name="gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">Date Of Birth</string>
    <string name="staff">Staff Number</string>
    <string name="department">Department</string>

    <string-array name="departments_array">
        <item>Actuarial Consulting</item>
        <item>Administration</item>
        <item>CIA</item>
        <item>Minet Risk Solutions Claims</item>
        <item>Finance</item>
        <item>Healthcare</item>
        <item>Human Resource</item>
        <item>Information Technology</item>
        <item>Internal Audit</item>
        <item>Legal and Compliance</item>
        <item>Life</item>
        <item>Managed Medical Care</item>
        <item>Marketing</item>
        <item>Minet Re</item>
        <item>Minet Risk Solutions Coast</item>
        <item>Minet Risk Solutions Corporate</item>
        <item>Retail and SME</item>
        <item>Minet Risk Solutions Western</item>
        <item>Pensions</item>
        <item>Risk Consulting</item>
        <item>Wellness</item>
    </string-array>

    <string name="email">Email</string>
    <string name="phoneNo">Phone number</string>
    <string name="finish">Finish</string>

    <string name="verify">Verify</string>
    <string name="otp">Verification Code</string>
    <string name="otp_desc">Please wait for the one time pin to be added automatically</string>
    <string name="forget_detail">Please enter the phone number used to create this account </string>
    <string name="new_credentials">New Credentials </string>
    <string name="new_credentials_desc">Your Identity has been verified. Please enter new password </string>
    <string name="new_password">New password </string>
    <string name="confirm_password">Confirm password </string>
    <string name="password_updated">Password Updated </string>
    <string name="password_updated_success">Your password been updated successfully</string>

    <string name="fit_one">Google Fit</string>
    <string name="fit_two">Google Fit is a free fitness tracking app developed by Google that allows users to track their activity and health data across various devices and apps.</string>
    <string name="fit_three">To maximise your experience using this staff wellness app you need to download google fit from play store</string>
    <string name="fit_four">Download</string>
    <string name="fit_five">i have google fit installed</string>
    <string name="fit_six">Sign In With Google</string>
    <string name="fit_seven">To access your health data sign in with your google account. Use the same google account you used to sign in to google fit.</string>
    <string name="fit_eight">sign in</string>
    <string name="fit_nine">add profile picture</string>
    <string name="fit_ten">Account Created Successfully</string>

    <string name="salute_one">Top of the morning,</string>
    <string name="salute_two">How is it going?</string>
    <string name="salute_three">Burning the midnight oil?</string>
    <string name="user">Watson</string>
    <string name="emoji_one">👋🏽</string>
    <string name="emoji_two">😎</string>
    <string name="emoji_three">😅</string>

    <string name="profile_one">Watson</string>
    <string name="profile_two">Muturi</string>
    <string name="profile_three">ICT</string>

    <string name="leaderboard_one">Daily Insights</string>
    <string name="leaderboard_two">leaderboard</string>
    <string name="leaderboard_three">4603</string>
    <string name="leaderboard_four">Watson Muturi</string>
    <string name="leaderboard_five">3978</string>
    <string name="leaderboard_six">Evans Wakae</string>
    <string name="leaderboard_seven">3862</string>
    <string name="leaderboard_eight">James Yugi</string>

    <string name="activity">Activity Summary</string>
    <string name="steps_one">Steps Taken</string>
    <string name="steps_two">4,603</string>
    <string name="steps_three">Steps</string>
    <string name="calories_one">Calories</string>
    <string name="calories_two">623</string>
    <string name="calories_three">KCal</string>

    <string-array name="step_values">
        <item>3200</item>
        <item>5400</item>
        <item>4200</item>
        <item>7000</item>
        <item>6100</item>
        <item>8000</item>
        <item>5000</item>
    </string-array>

    <string-array name="week_days">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <string name="indicator_one">Body Conditions</string>
    <string name="indicator_two">Heart Rate</string>
    <string name="indicator_three">124</string>
    <string name="indicator_four">bpm</string>
    <string name="indicator_five">BMI</string>
    <string name="indicator_six">18.8</string>
    <string name="indicator_seven">pt</string>
    <string name="indicator_eight">healthy</string>

    <string name="sleep_one">Sleep</string>
    <string name="sleep_two">Bedtime</string>
    <string name="sleep_three">10:30 PM</string>
    <string name="sleep_four">Wake Up</string>
    <string name="sleep_five">5:30 AM</string>
    <string name="sleep_six">Time In Bed</string>
    <string name="sleep_seven">7hr 50min</string>

    <string name="fitness_one">Fitness</string>
    <string name="fitness_two">Gym</string>
    <string name="fitness_three">Sports</string>
    <string name="fitness_four">Activities</string>

    <string name="step_one">today</string>
    <string name="step_two">4,603</string>
    <string name="step_three">Stats</string>
    <string name="step_four">Calories Burned</string>
    <string name="step_five">burned</string>
    <string name="step_six">67 kcal</string>
    <string name="step_seven">remaining</string>
    <string name="step_eight">23 kcal</string>
    <string name="step_nine">Distance Covered</string>
    <string name="step_ten">2 Kms</string>
    <string name="step_eleven">Move Minutes</string>
    <string name="step_twelve">114</string>
    <string name="step_thirteen">mins</string>
    <string name="step_fourteen">Walking Speed</string>
    <string name="step_fifteen">1.10</string>
    <string name="step_sixteen">mps</string>
    <string name="step_seventeen">Trends</string>
    <string name="step_eighteen">Flights Climbed</string>
    <string name="step_nineteen">5</string>
    <string name="step_twenty">Highlights</string>
    <string name="step_twentyOne">Goals</string>
    <string name="step_twentyTwo">My Map</string>
    <string name="step_twentyThree">Metrics</string>
    <string name="step_twentyFour">walking route</string>
    <string name="step_twentyFive">2 kms</string>
    <string name="step_twentySix">route length</string>
    <string name="step_twentySeven">12 m</string>
    <string name="step_twentyEight">elevation gain</string>
    <string name="step_twentyNine">4,489</string>
    <string name="step_thirty">steps</string>
    <string name="step_thirtyOne">1.10</string>
    <string name="step_thirtyTwo">mps</string>
    <string name="step_thirtyThree">47</string>
    <string name="step_thirtyFour">mins</string>
    <string name="step_thirtyFive">469</string>
    <string name="step_thirtySix">kcal</string>

    <string name="calory_one">Today</string>
    <string name="calory_two">623</string>
    <string name="calory_three">KCal</string>
    <string name="calory_four">walking</string>
    <string name="calory_five">gym</string>
    <string name="calory_six">sports</string>
    <string name="calory_seven">activities</string>
    <string name="calory_eight">123 kcal</string>
    <string name="calory_nine">200 kcal</string>
    <string name="calory_ten">100 kcal</string>
    <string name="calory_eleven">100 kcal</string>

    <string name="heart_one">Heart\nConditions</string>
    <string name="heart_two">Heart Rate</string>
    <string name="heart_three">124 bpm</string>
    <string name="heart_four">Temperature</string>
    <string name="heart_five">celsius</string>
    <string name="heart_six">38.9°</string>
    <string name="heart_seven">Blood Pressure</string>
    <string name="heart_eight">mmHg</string>
    <string name="heart_nine">120/80</string>
    <string name="heart_ten">Glucose</string>
    <string name="heart_eleven">mg/dl</string>
    <string name="heart_twelve">75</string>
    <string name="heart_thirteen">Cholesterol</string>
    <string name="heart_fourteen">mg/dl</string>
    <string name="heart_fifteen">200</string>
    <string name="heart_sixteen">Height</string>
    <string name="heart_seventeen">cms</string>
    <string name="heart_eighteen">180</string>
    <string name="heart_nineteen">Weight</string>
    <string name="heart_twenty">kgs</string>
    <string name="heart_twentyOne">73</string>
    <string name="heart_twentyTwo">Bmi</string>

    <string name="schedule_one">Edit Your Schedule</string>
    <string name="schedule_two">Save</string>
    <string name="schedule_three">Bedtime</string>
    <string name="schedule_four">Wake Up</string>

    <string name="bmi_one">weight in kgs</string>
    <string name="bmi_two">73</string>
    <string name="bmi_three">height in cms</string>
    <string name="bmi_four">180</string>
    <string name="bmi_five">body mass index,</string>
    <string name="bmi_six">18.8</string>
    <string name="bmi_seven">pt</string>
    <string name="bmi_eight">healthy</string>

    <string name="sleepCounterOne">date today</string>
    <string name="sleepCounterTwo">Good morning</string>
    <string name="sleepCounterThree">swipe up to start tracking</string>
    <string name="sleepCounterFour">Good night</string>
    <string name="sleepCounterFive">swipe up to stop tracking</string>
    <string name="sleepCounterSix">Sleep Analysis</string>
    <string name="sleepCounterSeven">0%</string>
    <string name="sleepCounterEight">sleep duration</string>
    <string name="sleepCounterNine">Don’t give up on your dreams so soon, sleep longer</string>
    <string name="sleepCounterTen">Sleep Information</string>
    <string name="sleepCounterEleven">00:00</string>
    <string name="sleepCounterTwelve">Went to sleep</string>
    <string name="sleepCounterThirteen">Went to sleep</string>
    <string name="sleepCounterFourteen">Wake up</string>
    <string name="sleepCounterFifteen">Back to home</string>

    <string name="leaderboard_nine">Evans</string>
    <string name="leaderboard_ten">Watson</string>
    <string name="leaderboard_eleven">James</string>
    <string name="leaderboard_twelve">Place</string>
    <string name="leaderboard_thirteen">Name</string>
    <string name="leaderboard_fourteen">Department</string>
    <string name="leaderboard_fifteen">Steps</string>
    <string name="leaderboard_sixteen">ICT</string>

</resources>