<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    tools:context=".SignUpTwo">

    <TextView
        android:id="@+id/sign_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/lineto_circular_pro_black"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:transitionName="transition_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_title"
        android:fontFamily="@font/lineto_circular_pro_medium"
        android:text="@string/signup_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_title"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/lineto_circular_pro_medium"
            android:text="@string/gender"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/lineto_circular_pro_book"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/lineto_circular_pro_book"
                android:text="@string/female" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/lineto_circular_pro_medium"
            android:text="@string/dob"
            android:textColor="@color/black" />

        <DatePicker
            android:id="@+id/age_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:spinnersShown="true" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="@drawable/bg_black_rounded"
            android:fontFamily="@font/lineto_circular_pro_bold"
            android:text="@string/next"
            android:textColor="@color/white"
            android:transitionName="transition_next" />

    </LinearLayout>

</RelativeLayout>