<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FitnessOne">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_fit"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/fitness" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lineto_circular_pro_bold"
        android:text="@string/fit_one"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/lineto_circular_pro_bold"
        android:text="@string/fit_two"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/lineto_circular_pro_bold"
        android:text="@string/fit_three"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_download"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_black_rounded"
        android:fontFamily="@font/lineto_circular_pro_bold"
        android:text="@string/fit_four"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:background="@color/clear"
        android:fontFamily="@font/lineto_circular_pro_bold"
        android:gravity="bottom|center_horizontal"
        android:text="@string/fit_five"
        android:textAllCaps="false"
        android:textColor="@color/black" />

</LinearLayout>