<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_bmi_two"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/sumo" />

            <RelativeLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/lottie_bmi_two"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/bmi_weight_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lineto_circular_pro_bold"
                    android:text="@string/bmi_one" />

                <TextView
                    android:id="@+id/bmi_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bmi_weight_title"
                    android:fontFamily="@font/lineto_circular_pro_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/bmi_two" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/lottie_bmi_two"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/bmi_height_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/lineto_circular_pro_bold"
                    android:text="@string/bmi_three" />

                <TextView
                    android:id="@+id/bmi_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bmi_height_title"
                    android:fontFamily="@font/lineto_circular_pro_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/bmi_four" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp">

                <TextView
                    android:id="@+id/bmi_popup_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lineto_circular_pro_bold"
                    android:text="@string/bmi_five" />

                <TextView
                    android:id="@+id/bmi_index"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/bmi_popup_title"
                    android:fontFamily="@font/lineto_circular_pro_bold"
                    android:text="@string/bmi_six"
                    android:textColor="#7373bc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/bmi_index"
                    android:fontFamily="@font/lineto_circular_pro_bold"
                    android:text="@string/bmi_seven" />

            </RelativeLayout>

            <TextView
                android:id="@+id/bmi_popup_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/lineto_circular_pro_bold"
                android:text="@string/bmi_eight" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>