<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:transitionName="transition_tres"
    tools:context=".ForgetPasswordFour">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-90dp"
            android:fontFamily="@font/lineto_circular_pro_black"
            android:gravity="center_horizontal"
            android:text="@string/password_updated"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_checked" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lineto_circular_pro_book"
            android:gravity="center_horizontal"
            android:text="@string/password_updated_success"
            android:textAlignment="center" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/loginDos"
                android:layout_width="135dp"
                android:layout_height="40dp"
                android:transitionName="transition_login"
                android:layout_margin="5dp"
                android:background="@drawable/bg_black_rounded"
                android:fontFamily="@font/lineto_circular_pro_bold"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="13sp" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>