<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Calories">

    <TextView
        android:id="@+id/calory_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/lineto_circular_pro_bold"
        android:text="@string/calory_one" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/calory_title"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/calory_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lineto_circular_pro_bold"
            android:text="@string/calory_two"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/calory_count"
            android:fontFamily="@font/lineto_circular_pro_bold"
            android:text="@string/calory_three" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/calory_progress_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="150dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_calories" />

        <www.minet.staffwellness.VerticalProgressBar
            android:id="@+id/vertical_progress"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp" />

    </RelativeLayout>

</RelativeLayout>