<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/salutations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lineto_circular_pro_bold"
                android:text="@string/salute_one" />

            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/salutations"
                android:fontFamily="@font/lineto_circular_pro_bold"
                android:text="@string/user" />

            <TextView
                android:id="@+id/emoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user"
                android:text="@string/emoji_one" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_wellness"
                android:tint="@color/burgundy"
                tools:ignore="UseAppTint" />

        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">



            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>