<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".SignUpThree">

    <TextView
        android:id="@+id/sign_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/lineto_circular_pro_black"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:transitionName="transition_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lineto_circular_pro_medium"
        android:text="@string/signup_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lineto_circular_pro_medium"
            android:text="@string/staff"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_staff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/lineto_circular_pro_book"
                android:inputType="textCapWords"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="#101010" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lineto_circular_pro_medium"
            android:text="@string/department"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/department_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_spinner"
            android:entries="@array/departments_array"
            android:padding="12dp"
            android:popupBackground="@android:color/white"
            android:spinnerMode="dropdown" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/bg_black_rounded"
            android:fontFamily="@font/lineto_circular_pro_bold"
            android:text="@string/next"
            android:textColor="@color/white"
            android:transitionName="transition_next" />

    </LinearLayout>

</LinearLayout>